--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@angular/platform-browser": "6.0.3",
         "@angular/platform-browser-dynamic": "6.0.3",
         "@angular/router": "6.0.3",
+        "@types/file-saver": "^1.3.0",
         "chart.js": "2.7.1",
         "core-js": "2.5.6",
+        "file-saver": "^1.3.8",
         "font-awesome": "4.7.0",
         "fullcalendar": "3.5.1",
         "intl": "1.2.5",
