--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@angular/cli": "^6.0.8",
         "@angular/compiler-cli": "^6.0.2",
         "@angular/language-service": "^6.0.2",
+        "@types/angular": "^1.6.50",
         "@types/jasmine": "~2.8.6",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
